@@ -15,7 +15,8 @@ Version 0.001
 
 This plugin checks that all the files in the Git repository where your
 project is saved use Unix line endings and have no whitespace at the end of
-a line. Files not in the Git index are ignored.
+a line. Files not in the Git index are ignored. You can ignore additional
+files with the **ignore** option in `dist.ini`.
 
 The plugin runs in the before build phase and aborts the build if a violation
 is found.
