@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-Plugin-Git-RequireUnixEOL
 
 {{$NEXT}}
 
+  - Added ignore option to ignore files
+
 0.001  2017-10-16 21:45:09 UTC
 
   - Initial release
